# CodexPlusPlus

./: .gitattributes  README.md  README_EN.md  pyproject.toml  setup.bat
codex_session_delete/: cdp.py  helper_server.py  launcher.py  macos_installer.py  markdown_exporter.py  models.py  provider_sync.py  settings_store.py  user_scripts.py  watcher.py  windows_installer.py
codex_session_delete/inject/: renderer-inject.js
tests/: test_cdp.py  test_helper_server.py  test_launcher_cli.py  test_launcher_user_scripts.py  test_macos_installer.py  test_markdown_exporter.py  test_models.py  test_provider_sync.py  test_readme.py  test_renderer_script.py  test_settings_store.py  test_setup_bat.py  test_user_scripts.py  test_watcher.py  test_windows_installer.py
